# claude-memo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-security-cleanliness/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-code-hardening/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-documentation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-ci-release/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/: hooks.json
references/: ARCHITECTURE.md  AUTO_MEMO_SETUP.md
scripts/: auto_memo.py  auto_memo_hook.sh  compile_logs.py  init_vault.sh  memo_engine.py  memo_mcp_server.py  memo_utils.py  pre_compact_save.py  save_raw_log.py  session_context.py  setup_automation.sh  should_suggest_memo.py
