[project]
name = "claude-memo"
version = "1.0.0"
description = "Persistent engineering memory for Claude Code — automatic capture and semantic search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["claude", "ai", "memory", "obsidian", "knowledge-management"]
dependencies = [
    "sentence-transformers==5.4.0",
    "numpy==2.4.4",
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
mcp = ["mcp[cli]==1.27.0"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/save_raw_log.py" = ["E722"]
"scripts/pre_compact_save.py" = ["E722"]

[tool.mypy]
python_version = "3.11"
mypy_path = "scripts"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
