[project]
name = "claude-memo"
version = "1.0.0"
description = "Persistent engineering memory for Claude Code — automatic capture and semantic search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["claude", "ai", "memory", "obsidian", "knowledge-management"]
dependencies = [
    "sentence-transformers>=3.0,<4",
    "numpy>=1.26,<3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.8",
    "bandit>=1.8",
    "pip-audit>=2.7",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
mypy_path = "scripts"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
